migrate project to java 17